# bachar-cube

./: .gitignore  Cargo.toml  notes.txt
src/: find_solution.rs  improve_solution.rs  main.rs  outer_layer.rs  outer_piece.rs  piece.rs  position.rs  prefix_set.rs  priority_queue.rs  rotatable_layer.rs  scorable_layer.rs  visited_graph.rs
src/faster/: layer.rs  main.rs  position.rs  rotatable_layer.rs
web3d/: package-lock.json  package.json
web3d/src/: index.js
