[package]
name = "bachar-cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
crossbeam-utils = "0.8.8"
dashmap = "5.3.3"
itertools = "0.10.3"
parking_lot = "0.12.0"
petgraph = "0.6.0"
rayon = "1.5.2"

[profile.release]
debug = true

[[bin]]
name = "faster"
path = "src/faster/main.rs"
